# vidgear

./: .gitattributes  .gitignore  .travis.yml  404.html  LICENSE  README.md  Video ++  appveyor.yml  azure-pipelines.yml  changelog.md  codecov.yml  contributing.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml  versions.json
.circleci/: config.yml  continue_config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  needs-more-info.yml  no-response.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  proposal.md  proposal.yaml  question.md  question.yaml
.github/workflows/: ci_linux.yaml  ci_linux.yml  deploy_docs.yml  need_info.yml
0.2.0/: sitemap.xml
0.2.0/contribution/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/contribution/: index.html
0.2.1/gears/: index.html
0.2.1/help/: index.html
0.2.1/installation/: index.html
0.2.1/license/: index.html
0.2.1/overrides/: 404.html  main.html
0.2.1/switch_from_cv/: index.html
0.2.2/: 404.html
0.2.2/gears/: index.html
0.2.2/license/: index.html
0.2.2/search/: search_index.json
0.2.2/switch_from_cv/: index.html
0.2.3/: 404.html  index.html
0.2.3/contribution/: index.html
0.2.3/help/: index.html
0.2.4/: 404.html  sitemap.xml
0.2.5/: sitemap.xml
0.2.6/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html
0.3.2/: sitemap.xml
0.3.3/: objects.inv
0.3.4/: 404.html  index.html  sitemap.xml
changelog/: index.html
contribution/: index.html
dev/: 404.html  changelog.html  contribution.html  gears.html  index.html  license.html  objects.inv  sitemap.xml  switch_from_cv.html
docs/: changelog.md  contribution.md  gears.md  help.md  index.md  installation.md  license.md  sponsors.md  switch_from_cv.md
gears/: index.html
help/: index.html
installation/: index.html
latest/: 404.html  index.html  sitemap.xml
license/: index.html
overrides/: 404.html
scripts/: pre_install.sh
search/: search_index.json
switch_from_cv/: index.html
tests/: test_helper.py  test_writegear.py
v0.2.1-dev/: 404.html  index.html  sitemap.xml
v0.2.1-release/: 404.html  index.html  sitemap.xml
v0.2.1-stable/: 404.html  index.html  sitemap.xml
v0.2.2-dev/: 404.html  index.html  sitemap.xml
v0.2.2-release/: index.html  sitemap.xml
v0.2.2-stable/: 404.html  index.html  sitemap.xml
v0.2.3-dev/: 404.html  index.html  sitemap.xml
v0.2.3-release/: sitemap.xml
v0.2.3-stable/: 404.html  index.html  sitemap.xml
v0.2.4-dev/: 404.html  index.html  sitemap.xml
v0.2.4-release/: index.html
v0.2.4-stable/: 404.html  index.html  sitemap.xml
v0.2.5-dev/: 404.html  index.html  sitemap.xml
v0.2.5-release/: 404.html  index.html
v0.2.5-stable/: 404.html  index.html  sitemap.xml
v0.2.6-dev/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.6-release/: index.html
v0.2.6-stable/: 404.html  index.html  sitemap.xml
v0.2.7-dev/: 404.html  index.html  sitemap.xml
v0.3.0-dev/: 404.html  help.html  index.html  installation.html  objects.inv  sitemap.xml
v0.3.0-release/: 404.html  index.html  sitemap.xml
v0.3.0-stable/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.1-dev/: 404.html  index.html  sitemap.xml
v0.3.1-release/: index.html  sitemap.xml
v0.3.1-stable/: 404.html  index.html  sitemap.xml
v0.3.2-dev/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.2-release/: 404.html  index.html
v0.3.2-stable/: 404.html  index.html  sitemap.xml
v0.3.3-dev/: 404.html  index.html  sitemap.xml
v0.3.3-release/: 404.html  index.html  sitemap.xml
v0.3.3-stable/: 404.html  index.html  sitemap.xml
v0.3.4-dev/: 404.html  index.html  sitemap.xml
v0.3.4-stable/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.5-dev/: 404.html  index.html  sitemap.xml
v0.3.5-release/: 404.html  index.html  sitemap.xml
v0.3.5-stable/: 404.html  index.html  sitemap.xml
v0.3.6-dev/: 404.html  index.html  sitemap.xml
vidgear/: __init__.py  version.py
vidgear.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4699 files in other folders)
